fix and update -> Bug with the image background that was covering the header is fixed. Header updated to become the header I want it to be.

--- a/index.css
+++ b/index.css
@@ -23,6 +23,12 @@ body.light {
   --primary-disabled: hsl(65, 70%, 70%);
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html, body {
   background-color: var(--bg-dark);
   color: var(--text-muted);
@@ -54,9 +60,7 @@ time, .faded {
   color: var(--text-faded);
 }
 section {
-  background-color: var(--bg-mid);
   padding: 2rem 1.5rem;
-  z-index: 10;
   position: relative;
 }
 
@@ -82,6 +86,11 @@ img {
   object-fit: cover;
   float: left;
 }
+
+.back-dark {
+  background-color: var(--bg-dark);
+}
+
 
 
 /* Custom Theme Variables */
