--- a/styles/card.css
+++ b/styles/card.css
@@ -8,5 +8,4 @@
     max-width: 95dvw;
     background-color: var(--bg-light);
     color: var(--text-muted);
-    z-index: 10;
 }
