--- a/styles/image.css
+++ b/styles/image.css
@@ -4,10 +4,11 @@
 
 .back {
     position: absolute;
+    object-fit: cover;
     top: 0;
-    bottom: 0;
     left: 0;
     width: 100%;
     height: 120%;
-    z-index: 0;
+    z-index: -100;
+    background-position: 0;
 }
